add misc, styling

--- a/intro.html
+++ b/intro.html
@@ -6,7 +6,13 @@
 
 <head>
 <title>intro.html</title>
-
+<style type='text/css'>
+html,body {font-family: 'Geneva', 'Verdana', sans-serif;
+background-color:white' }
+img {border:none;}
+a { text-decoration: none; }
+a:hover { text-decoration: underline; }
+</style>
 </head>
 
 <body>
@@ -20,14 +26,6 @@
 <ul>
 <li>a way of generating music through code live</li>
 <li>operates on around the basis of "cycles" (musical equivalent to bar/measure)</li>
-</ul>
-
-<h3>ALTERNATIVES</h3>
-
-<ul>
-<li>Sonic Pi</li>
-<li>FoxDot</li>
-<li>ORCA</li>
 </ul>
 
 <h2>COMPONENTS</h2>
