--- a/intro.html
+++ b/intro.html
@@ -21,10 +21,26 @@ a:hover { text-decoration: underline; }
 
 <p><a href="https://tidalcycles.org/">https://tidalcycles.org/</a></p>
 
+<h2>WHAT IS LIVE CODING</h2>
+
+<ul>
+<li>evaluating code snippets realtime</li>
+</ul>
+
+<h2>WHY LIVE CODING</h2>
+
+<ul>
+<li>tool made to express musical (or visual) ideas quickly (closer to improvisation)
+<ul>
+<li>does a lot for you (but at the same restricts musical scope)</li>
+<li>even more so than more general purpose computer music software (Max/MSP, Pure Data, CSound, bare-bones SuperCollider)</li>
+</ul></li>
+</ul>
+
 <h2>WHAT IS TIDALCYCLES</h2>
 
 <ul>
-<li>a way of generating music through code live</li>
+<li>a way of generating music through code live created by Alex McLean (yaxu)</li>
 <li>operates on around the basis of "cycles" (musical equivalent to bar/measure)</li>
 </ul>
 
