--- a/misc.html
+++ b/misc.html
@@ -17,7 +17,49 @@ a:hover { text-decoration: underline; }
 
 <body>
 
-<h1>ALTERNATIVES - LIVE CODING FOR SOUND</h1>
+<h1>MISC</h1>
+
+<h2>WHY TIDAL CYCLES?</h2>
+
+<ul>
+<li>pattern strings allow for concise expression of rhythmic ideas</li>
+<li>software stack a bit more transparent than Sonic Pi (and easier to install on Linux)
+<ul>
+<li>expanding on TidalCycles a bit easier than other alternatives</li>
+</ul></li>
+<li>can easily complexify simple input</li>
+</ul>
+
+<h2>WHY NOT TIDAL CYCLES?</h2>
+
+<ul>
+<li>not so great for aleatoric/non-cyclic/non-beat music (although actually can get pretty ambient)</li>
+<li>not so great for "non-aligned" music (cycles with diff endpoints)</li>
+<li>maybe not so great for super-"process-based" music?</li>
+<li>scheduling larger formal structural ideas somewhat clunky (verse-chorus, etc)</li>
+</ul>
+
+<h2>GENERAL LIVE CODING THOUGHTS</h2>
+
+<ul>
+<li>a bit different than traditional music performance
+<ul>
+<li>not responsible for individual note events, level of interactivity with sound isn't one-to-one</li>
+<li>act less like a traditional performer, more like a conductor/director</li>
+<li>nevertheless, requires practice (although a diff sort)!</li>
+</ul></li>
+<li>sometimes just let the environment do the work ("idiomatic")
+<ul>
+<li>although can lead to "TidalCycles"-sounding music</li>
+</ul></li>
+<li>live coding can be exploratory
+<ul>
+<li>but sometimes having a game plan (listening to your "inner ear") is really helpful too</li>
+<li>can be interplay (so keep ears open) </li>
+</ul></li>
+</ul>
+
+<h2>ALTERNATIVES - LIVE CODING FOR SOUND</h2>
 
 <ul>
 <li>Sonic Pi (Ruby + erlang for OSC + SuperCollider) - Sam Aaron</li>
@@ -27,13 +69,13 @@ a:hover { text-decoration: underline; }
 <li>Gibber (JavaScript) - Charlie Roberts</li>
 </ul>
 
-<h1>LIVE CODING FOR VISUALS</h1>
+<h2>LIVE CODING FOR VISUALS</h2>
 
 <ul>
 <li>Hydra (JavaScript) - Olivia Jack</li>
 </ul>
 
-<h1>RESOURCES</h1>
+<h2>RESOURCES</h2>
 
 <ul>
 <li><a href="https://algorave.com/">https://algorave.com/</a> - Algorave</li>
