--- a/misc.html
+++ b/misc.html
@@ -62,17 +62,17 @@ a:hover { text-decoration: underline; }
 <h2>ALTERNATIVES - LIVE CODING FOR SOUND</h2>
 
 <ul>
-<li>Sonic Pi (Ruby + erlang for OSC + SuperCollider) - Sam Aaron</li>
-<li>Overtone (Clojure + SuperCollider) - Sam Aaron</li>
-<li>FoxDot (Python + SuperCollider) - Ryan Kirkbridge (Qirky)</li>
-<li>ORCA (JavaScript/Electron or C + Pilot as an option for sound) - hundredrabbits</li>
-<li>Gibber (JavaScript) - Charlie Roberts</li>
+<li><a href="https://sonic-pi.net/">Sonic Pi</a> (Ruby + erlang for OSC + SuperCollider) - Sam Aaron</li>
+<li><a href="https://overtone.github.io/">Overtone</a> (Clojure + SuperCollider) - Sam Aaron</li>
+<li><a href="https://foxdot.org/">FoxDot</a> (Python + SuperCollider) - Ryan Kirkbridge (Qirky)</li>
+<li><a href="https://hundredrabbits.itch.io/orca">ORCA</a> (JavaScript/Electron or C + Pilot as an option for sound) - hundredrabbits</li>
+<li><a href="http://charlie-roberts.com/gibber/">Gibber</a> (JavaScript) - Charlie Roberts</li>
 </ul>
 
 <h2>LIVE CODING FOR VISUALS</h2>
 
 <ul>
-<li>Hydra (JavaScript) - Olivia Jack</li>
+<li><a href="https://ojack.github.io/articles/hydra/index.html">Hydra</a> (JavaScript) - Olivia Jack</li>
 </ul>
 
 <h2>RESOURCES</h2>
@@ -80,6 +80,7 @@ a:hover { text-decoration: underline; }
 <ul>
 <li><a href="https://algorave.com/">https://algorave.com/</a> - Algorave</li>
 <li><a href="https://toplap.org/">https://toplap.org/</a> - TOPLAP - Alex McLean</li>
+<li><a href="https://github.com/toplap/awesome-livecoding/blob/master/README.md">https://github.com/toplap/awesome-livecoding/blob/master/README.md</a> - awesome live coding repo</li>
 <li><a href="https://iclc.livecodenetwork.org/">https://iclc.livecodenetwork.org/</a> - International Conference on Live Coding</li>
 </ul>
 
