add workshop,docker links

--- a/intro.html
+++ b/intro.html
@@ -19,7 +19,10 @@ a:hover { text-decoration: underline; }
 
 <h1>TIDALCYCLES INTRO</h1>
 
-<p><a href="https://tidalcycles.org/">https://tidalcycles.org/</a></p>
+<ul>
+<li>TidalCycles link - <a href="https://tidalcycles.org/">https://tidalcycles.org/</a></li>
+<li>these notes link - <a href="https://github.com/derekxkwan/tidal-workshop">https://github.com/derekxkwan/tidal-workshop</a></li>
+</ul>
 
 <h2>WHAT IS LIVE CODING</h2>
 
@@ -95,7 +98,7 @@ a:hover { text-decoration: underline; }
 <li><code>sudo apt install ghc cabal-install</code></li>
 </ul>
 
-<h4>MAC ALT.</h4>
+<h5>MAC ALT.</h5>
 
 <ul>
 <li><code>brew install ghc cabal-install</code></li>
@@ -113,6 +116,13 @@ a:hover { text-decoration: underline; }
 <li><a href="https://supercollider.github.io/">https://supercollider.github.io/</a></li>
 <li><code>Quarks.gui</code> -> Check <code>SuperDirt</code></li>
 <li>Note for Linux users, require use of <code>JACK</code></li>
+</ul>
+
+<h3>DOCKER IMAGES (look outdated)</h3>
+
+<ul>
+<li><a href="https://github.com/lvm/tida1vm">https://github.com/lvm/tida1vm</a> - tida1vm</li>
+<li><a href="https://github.com/DoubleDensity/tidebox">https://github.com/DoubleDensity/tidebox</a> - tidebox</li>
 </ul>
 
 <h2>GET UP AND RUNNING</h2>
