update mini notation

--- a/notes.html
+++ b/notes.html
@@ -43,7 +43,7 @@ a:hover { text-decoration: underline; }
 <h2>MINI NOTATION</h2>
 
 <ul>
-<li>grouping <code>[]</code> (<code>.</code> shorthand)
+<li>grouping <code>[]</code> (<code>.</code> shorthand, <code>{}</code> alternative)
 <ul>
 <li><code>s "bd [sn ho]"</code></li>
 <li>equivalent: <code>s "bd . sn ho"</code></li>
